--- a/WebAppBlog/Views/Shared/_Layout.cshtml
+++ b/WebAppBlog/Views/Shared/_Layout.cshtml
@@ -43,7 +43,9 @@
             </main>
         </div>
         <script src="https://unpkg.com/easymde/dist/easymde.min.js"></script>
-        @await RenderSectionAsync("Scripts", required: false)
+        <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/dompurify/dist/purify.min.js"></script>
+        
     </body>
 
     <footer class="border-top footer text-muted">
