--- a/WebAppBlog/Views/Post/Edit.cshtml
+++ b/WebAppBlog/Views/Post/Edit.cshtml
@@ -9,7 +9,7 @@
 <h4>Post</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div>
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
@@ -20,7 +20,16 @@
             </div>
             <div class="form-group">
                 <label asp-for="Content" class="control-label"></label>
-                <input asp-for="Content" class="form-control" />
+                <div class="editor-container">
+                    <div class="editor-pane">
+                        @* 왼쪽: 마크다운 입력 공간 *@
+                        <textarea asp-for="Content" id="markdown-editor" class="form-control"></textarea>
+                    </div>
+                    <div class="preview-pane">
+                        @* 오른쪽: 변환된 HTML이 표시될 공간 *@
+                        <div id="markdown-preview"></div>
+                    </div>
+                </div>
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
             <div class="form-group">
