--- a/WebAppBlog/Views/Post/Create.cshtml
+++ b/WebAppBlog/Views/Post/Create.cshtml
@@ -3,22 +3,18 @@
 @{
     ViewData["Title"] = "Create";
 }
-
-<h1>Create</h1>
-
-<h4>Post</h4>
 <hr />
 <div class="row">
     <div>
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
+                <label asp-for="Title" class="control-label">제목</label>
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Content" class="control-label"></label>
+                <label asp-for="Content" class="control-label">내용</label>
                 <div class="editor-container">
                     <div class="editor-pane">
                         @* 왼쪽: 마크다운 입력 공간 *@
@@ -32,19 +28,20 @@
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UrlSlug" class="control-label"></label>
+                <label asp-for="UrlSlug" class="control-label">키워드</label>
                 <input asp-for="UrlSlug" class="form-control" />
                 <span asp-validation-for="UrlSlug" class="text-danger"></span>
             </div>
+            <hr />
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="작성완료" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">돌아가기</a>
 </div>
 
 @section Scripts {
