--- a/WebAppBlog/Views/Post/Edit.cshtml
+++ b/WebAppBlog/Views/Post/Edit.cshtml
@@ -4,9 +4,6 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>Post</h4>
 <hr />
 <div class="row">
     <div>
@@ -14,38 +11,36 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
+                <label asp-for="Title" class="control-label">제목</label>
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Content" class="control-label"></label>
+                <label asp-for="Content" class="control-label">내용</label>
                 <div class="editor-container">
                     <div class="editor-pane">
-                        @* 왼쪽: 마크다운 입력 공간 *@
                         <textarea asp-for="Content" id="markdown-editor" class="form-control"></textarea>
                     </div>
                     <div class="preview-pane">
-                        @* 오른쪽: 변환된 HTML이 표시될 공간 *@
                         <div id="markdown-preview"></div>
                     </div>
                 </div>
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UrlSlug" class="control-label"></label>
+                <label asp-for="UrlSlug" class="control-label">키워드</label>
                 <input asp-for="UrlSlug" class="form-control" />
                 <span asp-validation-for="UrlSlug" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="수정 완료" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">돌아가기</a>
 </div>
 
 @section Scripts {
