--- a/WebAppBlog/Views/Post/Create.cshtml
+++ b/WebAppBlog/Views/Post/Create.cshtml
@@ -1,8 +1,9 @@
-﻿@model WebAppBlog.Models.Post
+﻿@model WebAppBlog.ViewModels.PostEditViewModel
 
 @{
     ViewData["Title"] = "Create";
 }
+
 <hr />
 <div class="row">
     <div>
@@ -26,6 +27,22 @@
                     </div>
                 </div>
                 <span asp-validation-for="Content" class="text-danger"></span>
+            </div>
+            <div class="row mb-3">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label asp-for="CategoryId" class="control-label"></label>
+                        <select asp-for="CategoryId" class="form-control" asp-items="Model.Categories">
+                            <option value="">-- 카테고리 선택 --</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label asp-for="NewCategoryName" class="control-label"></label>
+                        <input asp-for="NewCategoryName" class="form-control" placeholder="여기에 입력 시 새 카테고리 추가" />
+                    </div>
+                </div>
             </div>
             <div class="form-group">
                 <label asp-for="UrlSlug" class="control-label">키워드</label>
