--- a/WebAppBlog/Views/Shared/_Layout.cshtml
+++ b/WebAppBlog/Views/Shared/_Layout.cshtml
@@ -35,7 +35,16 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
-            @RenderBody()
+            <div class="col-md-3">
+                <h4>Dev Blog</h4>
+                <p>기술 블로그입니다.</p>
+
+                @await Component.InvokeAsync("CategoryMenu")
+            </div>
+
+            <div class="col-md-9">
+                @RenderBody()
+            </div>
         </main>
     </div>
 
