--- a/WebAppBlog/Views/Post/Details.cshtml
+++ b/WebAppBlog/Views/Post/Details.cshtml
@@ -9,7 +9,7 @@
     <header>
         <h2 class="blog-post-title">@Model.Title</h2>
         <p class="blog-post-meta">
-            @Model.CreatedAt.ToString("yyyy년 MM월 dd일")
+            @(Model.UpdatedAt?.ToString("yyyy년 MM월 dd일") ?? @Model.CreatedAt.ToString("yyyy년 MM월 dd일"))
         </p>
     </header>
     <hr />
